services/aredn-ntp/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: aredn-ntp
  namespace: aredn-ntp
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: aredn-ntp
  egress:
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
            - 100.64.0.0/10
      toPorts:
      - ports:
          - port: "123"
            protocol: UDP
